@@ -16,6 +16,8 @@ Enhancements
 
 * Names that resemble FTP servers (i.e., start with "ftp.") are opened 
   with the ftp: protocol.  (Feature request #598368)
+* Brent Beardsley modified the add-on support to load all xml files
+  for an add-on, not just one.
 
 
 Bug Fixes
